[Setup] Fix mvn site