@@ -61,7 +61,7 @@ import fr.becpg.repo.repository.model.CopiableDataItem;
 
 /**
  *
- * Register custom beCPG SPEL helper accessible with @beCPG.
+ * Register custom beCPG SPEL helper accessible with {@code @beCPG}.
  *
  * @author matthieu
  * @version $Id: $Id
@@ -125,10 +125,10 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.findOne($nodeRef)
+		 * Helper {@code @beCPG.findOne($nodeRef)}
 		 *
 		 * <code>
-		 * 	Example : @beCPG.findOne(nodeRef).qty
+		 * 	Example : {@code @beCPG.findOne(nodeRef)}.qty
 		 *</code>
 		 *
 		 * @param nodeRef
@@ -142,8 +142,8 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.propValue($nodeRef, $qname) <code>
-		 * Example : @beCPG.propValue(nodeRef,'bcpg:productQty')
+		 * Helper {@code @beCPG.propValue($nodeRef, $qname)} <code>
+		 * Example : {@code @beCPG.propValue(nodeRef,'bcpg:productQty')}
 		 *</code>
 		 *
 		 * @param nodeRef
@@ -158,7 +158,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.propValue($entity, $qname)
+		 * Helper {@code @beCPG.propValue($entity, $qname)}
 		 *
 		 * @param item
 		 * @param qname
@@ -178,7 +178,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.propMLValue($entity, $qname, $locale)
+		 * Helper {@code @beCPG.propMLValue($entity, $qname, $locale)}
 		 *
 		 * @param item
 		 * @param qname
@@ -195,19 +195,19 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 				MLPropertyInterceptor.setMLAware(isMLAware);
 			}
 
-			if (value instanceof MLText) {
+			if (value instanceof MLText mlText) {
 				if (locale == null) {
 					return value;
 				}
 
-				return MLTextHelper.getClosestValue((MLText) value, MLTextHelper.parseLocale(locale));
+				return MLTextHelper.getClosestValue(mlText, MLTextHelper.parseLocale(locale));
 			}
 
 			return null;
 		}
 
 		/**
-		 * Helper @beCPG.propMLValue($nodeRef, $qname, $locale)
+		 * Helper {@code @beCPG.propMLValue($nodeRef, $qname, $locale)}
 		 *
 		 * @param nodeRef
 		 * @param qname
@@ -236,7 +236,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.propValue( $qname)
+		 * Helper {@code @beCPG.propValue( $qname)}
 		 *
 		 * @param qname
 		 * @return property value in current entity
@@ -247,7 +247,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.propMLValue($mltext, $locale)
+		 * Helper {@code @beCPG.propMLValue($mltext, $locale)}
 		 *
 		 * get mlText locale value
 		 *
@@ -260,7 +260,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.setValue($entity, $qname, $value)
+		 * Helper {@code @beCPG.setValue($entity, $qname, $value)}
 		 *
 		 * Set property value on entity
 		 *
@@ -279,7 +279,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.setValue( $qname, $value)
+		 * Helper {@code @beCPG.setValue( $qname, $value)}
 		 *
 		 * Set property value on current entity
 		 *
@@ -292,7 +292,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.setAssocs($nodeRef, $qname, $assocNodeRefs)
+		 * Helper {@code @beCPG.setAssocs($nodeRef, $qname, $assocNodeRefs)}
 		 *
 		 * @param nodeRef
 		 * @param qname
@@ -313,7 +313,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.setAssoc($nodeRef, $qname, $assocNodeRef)
+		 * Helper {@code {@code @beCPG.setAssoc($nodeRef, $qname, $assocNodeRef)}}
 		 *
 		 * @param nodeRef
 		 * @param qname
@@ -335,7 +335,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.assocValue($nodeRef, $qname)
+		 * Helper {@code @beCPG.assocValue($nodeRef, $qname)}
 		 *
 		 * @param nodeRef
 		 * @param qname
@@ -360,7 +360,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.assocValues($entity, $qname)
+		 * Helper {@code @beCPG.assocValues($entity, $qname)}
 		 *
 		 * @param nodeRef
 		 * @param qname
@@ -384,7 +384,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.sourcesAssocValues($nodeRef, $qname)
+		 * Helper {@code @beCPG.sourcesAssocValues($nodeRef, $qname)}
 		 *
 		 * @param nodeRef
 		 * @param qname
@@ -406,7 +406,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.assocPropValues($nodeRef, $assocQname, $propQName)
+		 * Helper {@code @beCPG.assocPropValues($nodeRef, $assocQname, $propQName)}
 		 *
 		 * @param nodeRef
 		 * @param assocQname
@@ -416,7 +416,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		public List<Serializable> assocPropValues(NodeRef nodeRef, String assocQname, String propQName) {
 			if (nodeRef != null) {
 				return associationService.getTargetAssocs(nodeRef, getQName(assocQname)).stream().map(o -> propValue(o, propQName))
-						.filter(Objects::nonNull).collect(Collectors.toList());
+						.filter(Objects::nonNull).toList();
 			}
 			return null;
 		}
@@ -430,18 +430,17 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.assocAssocValues($nodeRef, $assocQname, $assocAssocQName)
+		 * Helper {@code @beCPG.assocAssocValues($nodeRef, $assocQname, $assocAssocQName)}
 		 *
 		 * @param nodeRef
 		 * @param assocAssocQName
-		 * @param propQName
 		 * @return collection of association association values
 		 */
 		public List<NodeRef> assocAssocValues(NodeRef nodeRef, String assocQname, String assocAssocQName) {
 			if (nodeRef != null) {
 				return associationService.getTargetAssocs(nodeRef, getQName(assocQname)).stream()
 						.flatMap(o -> assocValues(o, assocAssocQName).stream()) // Flatten the list of NodeRef
-						.filter(Objects::nonNull).collect(Collectors.toList());
+						.filter(Objects::nonNull).toList();
 			}
 
 			return null;
@@ -456,17 +455,18 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.assocPropValue($nodeRef, $assocQname, $propQName)
+		 * Helper {@code @beCPG.assocPropValue($nodeRef, $assocQname, $propQName)}
 		 *
-		 * Example : var val = @beCPG.assocPropValue(nodeRef, "bcpg:geoOrigin",
+		 * Example :  {@code var val = @beCPG.assocPropValue(nodeRef, "bcpg:geoOrigin",
 		 * "bcpg:isoCode"); #val!=null ? @beCPG.setValue($nodeRef,
-		 * "cm:title", @beCPG.assocPropValue("bcpg:geoOrigin", "bcpg:isoCode"))
-		 * : "";
+		 * "cm:title",  @beCPG.assocPropValue("bcpg:geoOrigin", "bcpg:isoCode"))
+		 * : ""; 
 		 *
 		 * or
 		 *
 		 * @beCPG.setValue("cm:title", @beCPG.assocPropValue("bcpg:geoOrigin",
 		 * "bcpg:isoCode"))
+		 *}
 		 *
 		 * @param nodeRef
 		 * @param assocQname
@@ -486,7 +486,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.findDuplicates($collection)
+		 * Helper {@code @beCPG.findDuplicates($collection)}
 		 *
 		 * @return Set of duplicates
 		 */
@@ -496,7 +496,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.getQName($qname)
+		 * Helper {@code @beCPG.getQName($qname)}
 		 *
 		 * @param qName
 		 * @return QName from string
@@ -506,7 +506,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.updateMLText($mltext, $locale, $value)
+		 * Helper {@code @beCPG.updateMLText($mltext, $locale, $value)}
 		 *
 		 * Update mlText locale value
 		 *
@@ -531,7 +531,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.runScript($nodeRef)
+		 * {@code @beCPG.runScript($nodeRef)}
 		 *
 		 * @param scriptNode
 		 */
@@ -555,14 +555,16 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.sum($range, $formula)
+		 * <pre>
+		 * {@code @beCPG.sum($range, $formula)}
 		 *
-		 *                    Example :
+		 *                    Example :{@code
 		 * @beCPG.sum(compoListView.compoList.?[parent ==
 		 *                                             null],"entity.costList[0].value
 		 *                                             + dataListItem.qty")
 		 * @beCPG.sum(compoListView.compoList.?[parent ==
-		 *                                             null],"@beCPG.propValue(dataListItem.nodeRef,'bcpg:compoListQty')")
+		 *                                             null],"@beCPG.propValue(dataListItem.nodeRef,'bcpg:compoListQty')")}
+		 * </pre>                                            
 		 *
 		 * @param range
 		 * @param formula
@@ -573,7 +575,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.sum($range)
+		 * {@code @beCPG.sum($range)}
 		 *
 		 * @param range
 		 * @return sum range of double
@@ -583,7 +585,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.avg($range, $formula)
+		 * {@code @beCPG.avg($range, $formula)}
 		 *
 		 * @param range
 		 * @param formula
@@ -594,7 +596,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.avg($range)
+		 * {@code @beCPG.avg($range)}
 		 *
 		 *                    @param range
 		 * @return average range of double
@@ -604,7 +606,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.max($range, $formula)
+		 * {@code @beCPG.max($range, $formula)}
 		 *
 		 * @param range
 		 * @param formula
@@ -615,7 +617,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.max($range)
+		 * {@code @beCPG.max($range)}
 		 *
 		 * @param range
 		 * @return get max of range of double
@@ -625,7 +627,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.join($pattern, $range)
+		 * {@code @beCPG.join($pattern, $range)}
 		 *
 		 * @param pattern
 		 * @param range
@@ -636,11 +638,12 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.join($pattern, $range)
-		 * @beCPG.join($pattern, $range1, $range2)
+		 * {@code @beCPG.join($pattern, $range)}
+		 * {@code @beCPG.join($pattern, $range1, $range2)}
 		 *
 		 * @param pattern
-		 * @param ranges
+		 * @param range1
+		 * @param range2
 		 * @return get join from pattern and ranges
 		 */
 		public String join(String pattern, List<String> range1, List<String> range2) {
@@ -655,7 +658,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.min($range, $formula)
+		 * {@code @beCPG.min($range, $formula)}
 		 *
 		 * @param range
 		 * @param formula
@@ -666,7 +669,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.min($range)
+		 * {@code @beCPG.min($range)}
 		 *
 		 * @param range
 		 * @return get min of range of double
@@ -676,7 +679,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.extractCustomList($nodeRef, $listType) @param listType
+		 * {@code @beCPG.extractCustomList($nodeRef, $listType)} @param listType
 		 * @return list
 		 */
 		public Collection<RepositoryEntity> extractCustomList(NodeRef nodeRef, String listType) {
@@ -684,7 +687,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.extractCustomList($listType) @param listType
+		 * {@code @beCPG.extractCustomList($listType)} @param listType
 		 * @return list
 		 */
 		public Collection<RepositoryEntity> extractCustomList(String listType) {
@@ -692,7 +695,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.saveCustomList($range)
+		 * {@code @beCPG.saveCustomList($range)}
 		 *
 		 * @param range
 		 */
@@ -701,7 +704,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.applyFormulaToList($range, $formula)
+		 * {@code @beCPG.applyFormulaToList($range, $formula)}
 		 *
 		 * @param range
 		 * @param formula
@@ -711,9 +714,8 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.filter($range, formula)
+		 * Helper {@code @beCPG.filter($range, formula)}
 		 *
-		 * @param <T>
 		 * @param range
 		 * @param formula
 		 * @return filter collection with spel formula
@@ -725,15 +727,14 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 
 				return range.stream().filter(p -> {
 					return exp.getValue(formulaService.createItemSpelContext(entity, p), Boolean.class);
-				}).collect(Collectors.toList());
+				}).toList();
 			}
 			return null;
 		}
 
 		/**
-		 * Helper @beCPG.replaceByFormula($rangeR, formula)
+		 * Helper {@code @beCPG.replaceByFormula($rangeR, formula)}
 		 *
-		 * @param <T>
 		 * @param range
 		 * @param formula
 		 * @return for each item return a new item based on formula
@@ -746,15 +747,14 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 
 				return (Collection<T>) range.stream().map(p -> {
 					return exp.getValue(formulaService.createItemSpelContext(entity, p));
-				}).collect(Collectors.toList());
+				}).toList();
 			}
 			return null;
 		}
 
 		/**
-		 * Helper @beCPG.groupingByFormula($range, groupingFormula)
+		 * Helper {@code @beCPG.groupingByFormula($range, groupingFormula)}
 		 *
-		 * @param <T>
 		 * @param range
 		 * @param groupingFormula
 		 * @return group the list by formula
@@ -773,9 +773,8 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.filterByAssoc($range, $assocQname, $values)
+		 * Helper {@code @beCPG.filterByAssoc($range, $assocQname, $values)}
 		 *
-		 * @param <T>
 		 * @param range
 		 * @param assocName
 		 * @param values
@@ -786,15 +785,14 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 				return range.stream().filter(nodeRef -> {
 					List<NodeRef> assocs = associationService.getTargetAssocs(nodeRef, getQName(assocName));
 					return assocs.containsAll(values);
-				}).collect(Collectors.toList());
+				}).toList();
 			}
 			return null;
 		}
 
 		/**
-		 * Helper @beCPG.getOrDefault($range, $index, $defaultValue)
+		 * Helper {@code @beCPG.getOrDefault($range, $index, $defaultValue)}
 		 *
-		 * @param <T>
 		 * @param range
 		 * @param index
 		 * @param defaultValue
@@ -808,9 +806,8 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper  @beCPG.children($parent, $compositeList)
+		 * Helper  {@code @beCPG.children($parent, $compositeList)}
 		 *
-		 * @param <T>
 		 * @param parent
 		 * @param compositeList
 		 * @return children of parent item
@@ -828,7 +825,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.formatNumber($number)
+		 * Helper {@code @beCPG.formatNumber($number)}
 		 *
 		 * @param number
 		 * @return standard becpg number format
@@ -838,10 +835,10 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper @beCPG.formatNumber($number, $format )
+		 * Helper {@code @beCPG.formatNumber($number, $format )}
 		 *
-		 *    Example: @beCPG.formatNumber(10.00005d,
-		 *                              "0.##")
+		 *    Example:{@code @beCPG.formatNumber(10.00005d,
+		 *                              "0.##")}
 		 *
 		 * @param number
 		 * @param format
@@ -852,10 +849,10 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * Helper  @beCPG.formatDate($date )
+		 * Helper  {@code @beCPG.formatDate($date )}
 		 *
-		 *  Example: @beCPG.formatDate(new
-		 *                          java.util.Date() )
+		 *  Example: {@code @beCPG.formatDate(new
+		 *                          java.util.Date() )}
 		 *
 		 * @param date
 		 * @return standard becpg date format
@@ -865,10 +862,10 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.formatDate($date, $format )
+		 * {@code @beCPG.formatDate($date, $format )}
 		 *
-		 *  Example: @beCPG.formatDate(new
-		 *                          java.util.Date(),"dd/mm/YYYY" )
+		 *  Example: {@code@beCPG.formatDate(new
+		 *                          java.util.Date(),"dd/mm/YYYY" )}
 		 *
 		 * @param date
 		 * @return standard becpg number format
@@ -878,10 +875,10 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		}
 
 		/**
-		 * @beCPG.updateDate($date, $field, $amount )
+		 * {@code @beCPG.updateDate($date, $field, $amount )}
 		 *
-		 *  Example: @beCPG.updateDate(new
-		 *                          java.util.Date(), java.util.Calendar.DAY_OF_MONTH, -5 )
+		 *  Example:  {@code @beCPG.updateDate(new
+		 *                          java.util.Date(), java.util.Calendar.DAY_OF_MONTH, -5 )}
 		 *  cf Calendar JavaDoc
 		 *
 		 * @param date
@@ -896,13 +893,13 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 
 		/**
 		 *
-		 * Helper  @beCPG.copy($fromNodeRef, $propQNames, $listQNames)
+		 * Helper  {@code @beCPG.copy($fromNodeRef, $propQNames, $listQNames)}
 		 *
 		 *  Copy properties from an entity to current
 		 *  entity
 		 *
-		 *  Example: @beCPG.copy(compoListView.compoList[0].product,{"bcpg:suppliers","bcpg:legalName"},{"bcpg:costList"});
-		 *  Example: @beCPG.copy(compoListView.compoList[0].product,{"bcpg:suppliers","bcpg:legalName"},{"bcpg:costList|true"}); // Force full copy of costList
+		 *  Example: {@code @beCPG.copy(compoListView.compoList[0].product,{"bcpg:suppliers","bcpg:legalName"},{"bcpg:costList"})};
+		 *  Example: {@code @beCPG.copy(compoListView.compoList[0].product,{"bcpg:suppliers","bcpg:legalName"},{"bcpg:costList|true"})}; // Force full copy of costList
 		 *
 		 * @param fromNodeRef
 		 * @param propQNames
@@ -1029,8 +1026,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 		@SuppressWarnings({ "unchecked", "rawtypes" })
 		private void cloneDataList(Object data, Object oldData, Object to, PropertyDescriptor pd)
 				throws IllegalAccessException, InvocationTargetException, NoSuchMethodException {
-			if (oldData instanceof LazyLoadingDataList) {
-				LazyLoadingDataList lazyDataList = (LazyLoadingDataList) oldData;
+			if (oldData instanceof LazyLoadingDataList lazyDataList) {
 				lazyDataList.clear();
 				lazyDataList.addAll(clone((Collection) data));
 			} else {
@@ -1038,7 +1034,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 			}
 		}
 
-		@SuppressWarnings({ "unchecked", "rawtypes" })
+		@SuppressWarnings({ "unchecked" })
 		private <T extends RepositoryEntity> List<T> clone(Collection<T> data) {
 			List<T> clonedList = new LinkedList<>();
 			Map<NodeRef, T> origDataItemMap = new HashMap<>();
@@ -1054,8 +1050,7 @@ public class BeCPGSpelFunctions implements CustomSpelFunctions {
 			}
 
 			for (T item : clonedList) {
-				if (item instanceof CompositeDataItem) {
-					CompositeDataItem compositeItem = (CompositeDataItem) item;
+				if (item instanceof CompositeDataItem compositeItem) {
 					T parent = (T) compositeItem.getParent();
 					if (parent != null) {
 						if (parent.getNodeRef() != null) {
